[package]
name = "comatablity_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = '*'
ethers = { version = "2.0.14", features = ["ws"]}
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }